# verimem

./: .dockerignore  .gitattributes  .gitignore  BENCHMARKS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSING.md  Makefile  README.md  RELEASE_GATE.md  RENAME-PLAN.md  SCALE.md  SECURITY.md  STATE.md  audit_a4_history.json  audit_a4_history_clp.json  audit_cycle284_290.json  audit_cycle295_309.json  bench_4mode_comparison.json  bench_cure_off.json  bench_cure_on.json  bench_cure_on_v2.json  bench_cycle326_real_corpus.json  bench_cycle330_cures.json  bench_cycle331_cures_N20.json  bench_emergence_k100.json  bench_emergence_k200.json  bench_emergence_k25.json  bench_emergence_k50.json  bench_emergence_loop257_k100.json  bench_latency_4mode.json  bench_multi_sample_cycle319_3.json  bench_multi_sample_cycle319_3_M10.json  bench_multi_sample_cycle324_size2000.json  bench_multi_sample_cycle324_size500.json  bench_production_loop254_v2.json  bench_production_loop255_k100_N20.json  (+41 more)
.claude/: launch.json
.claude-plugin/: plugin.json
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  secret_scanning.yml
benchmark/: TRUST_CORE.md  __init__.py  _jm_baseline_probe.py  ann_recall_scale_bench.py  anti_confab_retrieval_bench.py  bench_poisoning_resistance.py  bench_verified_by_hardgate.py  build_retrieval_groundtruth.py  calibration_bench.py  comparative_retrieval.py  compare_retrieval_variants.py  competitor_probe_mem0.py  competitor_probe_verimem.py  concurrency_multiprocess.py  concurrency_shared_server.py  concurrency_stress.py  confab_suite.py  confabulation_corpus.py  contradiction_audit_live.py  corpus_fp_bench.py  corpus_health_snapshot.py  corpus_truth_scan_local.py  distractor_bench.py  end_to_end_reality.py  epistemic_harness.py  eval_retrieval_with_gt.py  evaluator.py  evolution_moat_vs_mem0.py  external_clasheval.py  external_f1_msc.py  external_f1_musique.py  external_f1_quality.py  external_grounding.py  external_readpath.py  external_sycophancy.py  external_sycophancy_e2e.py  external_sycophancy_multiturn.py  extraction_recall_diag.py  fact_confab_bench.py  fact_grounding_bench.py  (+92 more)
constraints/: security.txt
data/: bench_compositional_4providers.results.json  bench_compositional_4providers.summary.json  bench_compositional_4providers.summary.md  bench_compositional_anthropic.results.json  bench_compositional_anthropic.summary.json  bench_compositional_anthropic.summary.md  bench_compounding_n_iter2.by_iter.json  bench_compounding_n_iter2.results.json  bench_compounding_n_iter2.summary.json  bench_concurrency_facts.json  bench_concurrency_facts_collision.json  bench_hard_memory_recall_3providers.results.json  bench_hard_memory_recall_3providers.summary.json  bench_held_out_practical.results.json  bench_held_out_practical.summary.md  bench_learning_curve_anthropic_n5.by_iter.json  bench_learning_curve_anthropic_n5.results.json  bench_learning_curve_anthropic_n5.summary.md  bench_memory_recall_3providers.results.json  bench_memory_recall_3providers.summary.json  bench_new_mechanisms.json  bench_real_4providers.results.json  bench_real_4providers.summary.json  bench_recall_ablation.json  bench_retrieval_held_out.json  bench_skill_compounding_4providers.results.json  bench_skill_compounding_4providers.summary.json  bench_with_without_hippo.results.json  bench_with_without_hippo.summary.json
docs/: AUDIT-LEDGER.md  AUDIT_2026-06-07.md  BENCHMARKS.md  CLAIM-RECEIPTS.md  COMPETITIVE_LANDSCAPE.md  CONVERSATIONAL_ENTITY_DESIGN.md  CYCLE109_HANDOFF.md  CYCLE113-HANDOFF.md  CYCLE134-DESIGN.md  DATACENTER_DESIGN.md  DECISION_CHAIN_DESIGN.md  DESIGN-esc-prefilter-2026-07-21.md  DESIGN-memory-ablation-2026-07-20.md  DESIGN_PARTNER.md  EPISTEMIC_FAILURES_STUDY.md  EVIDENCE-contradiction-external-snli-2026-07-19.md  EVIDENCE-external-2026-07-19.md  EVIDENCE-phase1.1-contradiction-moat-2026-07-19.md  EVIDENCE-poisoning-2026-07-22.md  EVIDENCE-stress-2026-07-18.md  F1_VIRGIN_CORPUS_FINDINGS.md  F2_MODULE_INVENTORY.md  FLAGS-AUDIT.md  HALUMEM_OFFICIAL_PROTOCOL.md  JUSTIFIED_MEMORY.md  L1_DETECTOR_ARCHITECTURE-2026-05-27.md  LAUNCH_READINESS_AUDIT.md  MCP_DEAD_SURFACE_AUDIT_2026-05-17.md  MCP_QUICKSTART.md  MEMORY_PROTOCOL.md  MIGRATIONS.md  MOAT_SUMMARY.md  MOONSHOTS.md  PLATFORM.md  PLUGIN_QUICKSTART.md  PRODUCT-TRUTH-GAP.md  PROJECT_REVIEW_2026-06-07.md  PROPOSAL-tamper-evidence-2026-07-19.md  QUICKSTART_SDK.md  RENAME-PLAN-engram-to-verimem.md  (+22 more)
engram/: __init__.py  _call_telemetry.py  _compat.py  _hang_watchdog.py  _proc_quiet.py  _singleton_guard.py  _telemetry_prefixes.py  active_learning.py  active_probe.py  admission_cleanup.py  admission_gate.py  agent.py  agent_scope.py  airgap.py  anchor_suspect.py  ann_cache.py  ann_index.py  anomaly_detection.py  anti_confab_gate.py  anti_confabulation.py  audit_tail.py  auto_dream_trigger.py  auto_dream_worker.py  auto_memory.py  bench_corpus_scale.py  betweenness_cache.py  bm25_rank.py  briefing.py  capability_token.py  causal_extract.py  chain_complexity.py  chain_validate.py  chain_visualize.py  chunking.py  cli.py  client.py  coding_reflection.py  coherence_check.py  community_detector.py  compilation.py  (+141 more)
examples/: sdk_quickstart.py
hippoagent/: __init__.py
hooks/: README.md  hippo_session_start.py
scripts/: agent_scope_demo.py  analyze_critic_verdicts.py  analyze_telemetry.py  audit_a4_history.py  audit_legacy_corpus.py  backfill_entity_graph.py  bench_ablation.py  bench_admission_external_corpora.py  bench_anticonfab_effectiveness.py  bench_c71_sampling_consolidate.py  bench_codebase_ingest.py  bench_coding_reflection.py  bench_compare.py  bench_concurrency.py  bench_confabulation.py  bench_consolidation.py  bench_content_hash_idempotency.py  bench_dg_cabling.py  bench_dream_pipeline.py  bench_e5_dense.py  bench_emerging_pipeline.py  bench_engram_code.py  bench_episode_decay.py  bench_episode_priority.py  bench_f16_quantize.py  bench_fuse_recall.py  bench_fusion_latency.py  bench_gates.py  bench_hallucination_rate.py  bench_held_out_practical.py  bench_hippo_pagerank.py  bench_hopfield.py  (+102 more)
(+1868 files in other folders)
